Undefined configuration parameters are now treated with default values

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<input type="text" name="console" placeholder="Console">
 	</form>
 
-	<h1 id='gridTitle'>ROM-DB</h1>
+	<h1 id='gridTitle'></h1>
 	<div id='gridList'></div>
 	<div id='pagesButtons'></div>
 </body>
